tests/negative/gold/toitdoc-super-test.gold
tests/negative/toitdoc-super-test.toit:9:3: error: Expected name of declaration
  : // invalid name
  ^
tests/negative/toitdoc-super-test.toit:7:4: warning: Unresolved reference 'super'
  $super
   ^~~~~
Compilation failed
